--- a/package.json
+++ b/package.json
@@ -10,10 +10,12 @@
   },
   "dependencies": {
     "@reduxjs/toolkit": "^2.8.2",
+    "lodash": "^4.17.21",
     "lucide-react": "^0.525.0",
     "next": "15.4.3",
     "react": "19.1.0",
     "react-dom": "19.1.0",
+    "react-gauge-chart": "^0.5.1",
     "react-redux": "^9.2.0"
   },
   "devDependencies": {
@@ -22,6 +24,7 @@
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
+    "@types/react-gauge-chart": "^0.4.3",
     "@types/react-redux": "^7.1.34",
     "eslint": "^9",
     "eslint-config-next": "15.4.3",
