--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@reduxjs/toolkit": "^2.8.2",
+    "lightweight-charts": "^5.0.8",
     "lodash": "^4.17.21",
     "lucide-react": "^0.525.0",
     "next": "15.4.3",
