--- a/package.json
+++ b/package.json
@@ -6,8 +6,7 @@
     "dev": "next dev --turbopack",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint",
-    "vercel-build": "npm install --legacy-peer-deps && next build"
+    "lint": "next lint"
   },
   "dependencies": {
     "@reduxjs/toolkit": "^2.8.2",
@@ -15,8 +14,8 @@
     "lodash": "^4.17.21",
     "lucide-react": "^0.525.0",
     "next": "15.4.3",
-    "react": "19.1.0",
-    "react-dom": "19.1.0",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
     "react-gauge-chart": "^0.5.1",
     "react-redux": "^9.2.0",
     "redux-persist": "^6.0.0"
